--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
     <body>
-        <div class ="banner">
+        <div class ="banner" id ="banner">
             <nav>
                 <h2></h2>
                 <ul>
@@ -29,8 +29,9 @@
                     </div>
                 </div>
             </nav>
+            <button id = easteregg>O</button>
             <div class="intro">
-                <h2>Personal Information</h2>
+                <!-- <h2>Personal Information</h2>
                 <p><span>Name:</span> Alfred Larsson</p>
                 <p><span>Phonenumber:</span> +4679-0114350</p>
                 <p><span>Email:</span> alfred.co95@gmail.com</p>
@@ -44,9 +45,18 @@
                 <p>Falkenbergs Gymnasieskola 2011-2014</p>
                 <h2>Linguistics</h2>
                 <p>English</p>
-                <p>Swedish (Mother tongue)</p>
+                <p>Swedish (Mother tongue)</p> -->
+                <td>
+                    <tr>
+                        <tbody id = "data-output">
+
+                        </tbody>
+                    </tr>
+                </td>
             </div>
         </div>
+        <script src = "/javascript/app.js"></script>
+        <script src = "/javascript/cv.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
