--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
     <body>
-        <div class ="banner">
+        <div class ="banner" id ="banner">
             <nav>
                 <h2></h2>
                 <ul>
@@ -28,6 +28,9 @@
                         <a href="#"><img src="icons/linkedin.png" height="40px" width="40px"></a>
                     </div>
                 </div>
+                <div>
+                    <input type="text" class="keyboard">
+                </div>
             </nav>
             <div class ="intro">
                 <h4>Hello, my name is</h4>
@@ -35,6 +38,7 @@
                 <h2>I'm an aspiring <br>software developer</h2>
                 <h3>Click <a href ="/index.html#main">here</a> to find out more about me</h3>
             </div>
+            <button id = easteregg>O</button>
         </div>
         <section class="about">
             <div id="main" class="main">
@@ -45,6 +49,7 @@
                 </div>
             </div>
         </section>
+        <script src = "/javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
