--- a/contactme.html
+++ b/contactme.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
     <body>
-        <div class ="banner">
+        <div class ="banner" id ="banner">
             <nav>
                 <h2></h2>
                 <ul>
@@ -29,6 +29,7 @@
                     </div>
                 </div>
             </nav>
+            <button id = easteregg>O</button>
             <div class="contact-formula">
                 <div class="box">
                     <div class="box1">
@@ -46,6 +47,7 @@
                 </div>
             </div>
         </div>
+        <script src = "/javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
