--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     </head>
     <body>
-        <div class ="banner">
+        <div class ="banner" id ="banner">
             <nav>
                 <h2></h2>
                 <ul>
@@ -29,6 +29,7 @@
                     </div>
                 </div>
             </nav>
+            <button id = easteregg>O</button>
             <section class="main">
                 <div class="intro">
                     <h1>Welcome to my Portfolio</h1>
@@ -103,6 +104,7 @@
                 <h2>Click Any Of The Projects Above To Show More</h2>
             </div>
         </section>
+        <script src = "/javascript/app.js"></script>
     </body>
     <footer>
         <ul class="foot-list">
