--- a/cv.html
+++ b/cv.html
@@ -31,28 +31,8 @@
             </nav>
             <button id = easteregg>O</button>
             <div class="intro">
-                <!-- <h2>Personal Information</h2>
-                <p><span>Name:</span> Alfred Larsson</p>
-                <p><span>Phonenumber:</span> +4679-0114350</p>
-                <p><span>Email:</span> alfred.co95@gmail.com</p>
-                <p><span>Address:</span> Tågvägen 4K, 31173 Falkenberg</p>
-                <h2>Past Experiences</h2>
-                <p>Fynda Warehouse (Intern) 2013-2014</p>
-                <p>Lekmer - Warehouse 2014</p>
-                <p>Nelly Warehouse 2016-2017</p>
-                <p>Willys AB 2017-</p>
-                <h2>Education</h2>
-                <p>Falkenbergs Gymnasieskola 2011-2014</p>
-                <h2>Linguistics</h2>
-                <p>English</p>
-                <p>Swedish (Mother tongue)</p> -->
-                <td>
-                    <tr>
-                        <tbody id = "data-output">
-
-                        </tbody>
-                    </tr>
-                </td>
+                <div id = display-data>
+                </div>
             </div>
         </div>
         <script src = "/javascript/app.js"></script>
