--- a/contactme.html
+++ b/contactme.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href ="index.html">Home</a></li>
                     <li><a href="/index.html#main">About Me</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="/portfolio/index.html">Portfolio</a></li>
                     <li><a href="cv.html">CV</a></li>
                     <li><a href="contactme.html"><span style="color:rgb(163, 108, 189)">Contact Me</span></a></li>
                 </ul>
