--- a/contactme.html
+++ b/contactme.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <script src = "/javascript/app.js"></script>
+        <script src = "javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
