--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h2></h2>
                 <ul>
                     <li><a href ="index.html"><span style="color:rgb(163, 108, 189)">Home</span></a></li>
-                    <li><a href="/index.html#main">About Me</a></li>
-                    <li><a href="./portfolio/index.html">Portfolio</a></li>
+                    <li><a href="index.html#main">About Me</a></li>
+                    <li><a href="portfolio/index.html">Portfolio</a></li>
                     <li><a href="cv.html">CV</a></li>
                     <li><a href="contactme.html">Contact Me</a></li>
                 </ul>
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </section>
-        <script src = "/javascript/app.js"></script>
+        <script src = "javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
