--- a/cv.html
+++ b/cv.html
@@ -35,8 +35,8 @@
                 </div>
             </div>
         </div>
-        <script src = "javascript/app.js"></script>
-        <script src = "javascript/cv.js"></script>
+        <script src = "../../javascript/app.js"></script>
+        <script src = "../../javascript/cv.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
