--- a/cv.html
+++ b/cv.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <script src = "../../javascript/app.js"></script>
-        <script src = "../../javascript/cv.js"></script>
+        <script src = "../Labb2/javascript/cv.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
