--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>CV Alfred</title>
-    <link rel ="stylesheet" href ="CSS/cv.css">
+    <link rel ="stylesheet" href ="../CSS/cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Spectral:wght@600&display=swap" rel="stylesheet">
