--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>CV Alfred</title>
-    <link rel ="stylesheet" href ="../CSS/style.css">
+    <link rel ="stylesheet" href ="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Spectral:wght@600&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
             <nav>
                 <h2></h2>
                 <ul>
-                    <li><a href ="../index.html"><span style="color:rgb(163, 108, 189)">Home</span></a></li>
-                    <li><a href="../index.html#main">About Me</a></li>
-                    <li><a href="../portfolio/index.html">Portfolio</a></li>
-                    <li><a href="../cv.html">CV</a></li>
-                    <li><a href="../contactme.html">Contact Me</a></li>
+                    <li><a href="/index.html"><span style="color:rgb(163, 108, 189)">Home</span></a></li>
+                    <li><a href="/index.html#main">About Me</a></li>
+                    <li><a href="/portfolio/index.html">Portfolio</a></li>
+                    <li><a href="/cv.html">CV</a></li>
+                    <li><a href="/contactme.html">Contact Me</a></li>
                 </ul>
                 <div class="dropdown">
                     <button class="dropbtn">Social Media</button>
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </section>
-        <script src = "../../javascript/app.js"></script>
+        <script src = "/javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
