--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>CV Alfred</title>
-    <link rel ="stylesheet" href ="../CSS/cv.css">
+    <link rel ="stylesheet" href ="./CSS/cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Spectral:wght@600&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
             <nav>
                 <h2></h2>
                 <ul>
-                    <li><a href ="index.html">Home</a></li>
-                    <li><a href="/index.html#main">About Me</a></li>
-                    <li><a href="/portfolio/index.html">Portfolio</a></li>
-                    <li><a href="cv.html"><span style="color:rgb(163, 108, 189)">CV</span></a></li>
-                    <li><a href="contactme.html">Contact Me</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html#main">About Me</a></li>
+                    <li><a href="./portfolio/index.html">Portfolio</a></li>
+                    <li><a href="./cv.html"><span style="color:rgb(163, 108, 189)">CV</span></a></li>
+                    <li><a href="./contactme.html">Contact Me</a></li>
                 </ul>
                 <div class="dropdown">
                     <button class="dropbtn">Social Media</button>
@@ -35,12 +35,12 @@
                 </div>
             </div>
         </div>
-        <script src = "/javascript/app.js"></script>
-        <script src = "/javascript/cv.js"></script>
+        <script src = "./javascript/app.js"></script>
+        <script src = "./javascript/cv.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
-            <li><a href ="contactme.html">Contact Me</a></li>
+            <li><a href ="./contactme.html">Contact Me</a></li>
             <li><a href =""><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href ="https://github.com/Fredihi" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li><a href =""><i class="fa-brands fa-instagram"></i></a></li>
