--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>CV Alfred</title>
-    <link rel ="stylesheet" href ="/CSS/style.css">
+    <link rel ="stylesheet" href ="./CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Spectral:wght@600&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
             <nav>
                 <h2></h2>
                 <ul>
-                    <li><a href="/index.html"><span style="color:rgb(163, 108, 189)">Home</span></a></li>
-                    <li><a href="/index.html#main">About Me</a></li>
-                    <li><a href="/portfolio/index.html">Portfolio</a></li>
-                    <li><a href="/cv.html">CV</a></li>
-                    <li><a href="/contactme.html">Contact Me</a></li>
+                    <li><a href="./index.html"><span style="color:rgb(163, 108, 189)">Home</span></a></li>
+                    <li><a href="./index.html#main">About Me</a></li>
+                    <li><a href="./portfolio/index.html">Portfolio</a></li>
+                    <li><a href="./cv.html">CV</a></li>
+                    <li><a href="./contactme.html">Contact Me</a></li>
                 </ul>
                 <div class="dropdown">
                     <button class="dropbtn">Social Media</button>
@@ -33,24 +33,24 @@
                 <h4>Hello, my name is</h4>
                 <h1>Alfred Larsson</h1><br>
                 <h2>I'm an aspiring <br>software developer</h2>
-                <h3>Click <a href ="/index.html#main">here</a> to find out more about me</h3>
+                <h3>Click <a href ="./index.html#main">here</a> to find out more about me</h3>
             </div>
             <button id = easteregg>O</button>
         </div>
         <section class="about">
             <div id="main" class="main">
-                <img src="images/myface2.jpg">
+                <img src="./images/myface2.jpg">
                 <div class ="about-text">
                     <h2>About Me</h2>
                     <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p> 
                 </div>
             </div>
         </section>
-        <script src = "/javascript/app.js"></script>
+        <script src = "./javascript/app.js"></script>
     </body>
     <footer class ="footer">
         <ul class="foot-list">
-            <li><a href ="contactme.html">Contact Me</a></li>
+            <li><a href ="./contactme.html">Contact Me</a></li>
             <li><a href =""><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href ="https://github.com/Fredihi" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li><a href =""><i class="fa-brands fa-instagram"></i></a></li>
