--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
             </nav>
             <button id = easteregg>O</button>
             <div class="intro">
-                <div id = display-data>
+                <div id = "display-data">
                 </div>
             </div>
         </div>
